Agregar miembros al informe

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -23,6 +23,9 @@
 \titulo{Trabajo Práctico 1}
 
 \integrante{Tarrío, Ignacio}{363/15}{itarrio@dc.uba.ar}
+\integrante{Szperling, Sebastián Ariel}{763/15}{sszperling@dc.uba.ar}
+\integrante{Mena, Manuel}{313/14}{manuelmena1993@gmail.com}
+\integrante{Frachtenberg Goldsmit, Kevin}{247/14}{kevinfra94@gmail.com}
 
 \maketitle
 
