Add development to report

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -17,6 +17,7 @@
 
 \newcommand{\ord}{\ensuremath{\operatorname{O}}}
 \newcommand{\nat}{\ensuremath{\mathbb{N}}}
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 
 \begin{document}
 % CARATULA
