--- a/informe/desarrollo.tex
+++ b/informe/desarrollo.tex
@@ -62,9 +62,20 @@ Puede dividirse en:
 En este paso se desea obtener la normal de cada punto del objeto. Para ello
 se recurre a la ecuación 5 del enunciado de este trabajo práctico, que
 vincula una matriz formada por 3 direcciones de fuentes de iluminación con el
-vector $m$ y las intensidades del píxel en cada imágen. Esta matriz tiene 3 direcciones porque es la cantidad mínima de imágenes cuya fuente de iluminación difiera entre sí necesaria para inferir la orientación de la superficie.
+vector $m$ y las intensidades del píxel en cada imágen. Esta matriz tiene 3
+direcciones porque es la cantidad mínima de imágenes cuya fuente de
+iluminación difiera entre sí necesaria para inferir la orientación de la
+superficie.
 
-La matriz de
-direcciones contiene la dirección de cada fuente de iluminación dispuesta como fila.
+La matriz de direcciones contiene la dirección de cada fuente de iluminación
+dispuesta como fila. Una vez resuelto el sistema de ecuaciones se podrá conocer $m$ y asi mediante la siguiente ecuacion $||m|| = |I_0\rho| ||n||$, conocer el valor absoluto de $I_0\rho$. Esto permite conocer $n$ ya que tiene la misma dirección que $m$ con la diferencia de que $n$ está normalizado por ser la norma. Por lo que nos queda que $n = \frac{m}{||m||}$.
 
 \subsubsection{Estimacion de la profundidad}
+
+El siguiente paso es calcular la profundidad de cada pixel de la imagen. Para ello se recurre a las ecuaciones 11 y 12 del enunciado en donde se vincula a la normal de cada pixel con su profundidad. Estas ecuaciones nos permiten formar un sistema de ecuaciones como el de la ecuación 13.
+
+Es necesario notar que $M$, la matriz de este sistema, es una matriz esparsa. La manera en la que la está dispuesta la información es la siguiente:
+
+$M$ tiene dimensión $2n \times n$. En las primeras $n$ filas se reflejan las ecuaciones pertenecientes a $n_y$ y se forman dos diagonales contiguas que representan la vecindad vertical de los píxeles. En las segundas $n$ filas se reflejan las ecuaciones pertenecientes a $n_x$ y se forman dos diagonales separadas por el alto de la imagen que representan la vecindad horizontal de los píxeles.
+
+Esta disposición de los datos provoca que cada columna de $M$ contenga a lo sumo 4 elementos. Nuestra implementación consiste en considerar a esta matriz como un tipo especial de matriz (la esparsa), para la cual no se tiene un arreglo bidimensional como sería el caso habitual sino un vector de hashmap, donde cada elemento del vector representa una columna. Cada hashmap contendrá entonces 4 elementos o menos. Esto permite que al querer multiplicar una columna por otra (como ocurre en el caso de querer calcular $M^tM$) no sea necesario recorrer toda la columna sino únicamente los elementos distintos de 0. Esta optimización es crucial para el desarrollo del algoritmo a nivel temporal.
