Add more development to report

--- a/informe/desarrollo.tex
+++ b/informe/desarrollo.tex
@@ -79,3 +79,5 @@ Es necesario notar que $M$, la matriz de este sistema, es una matriz esparsa. La
 $M$ tiene dimensión $2n \times n$. En las primeras $n$ filas se reflejan las ecuaciones pertenecientes a $n_y$ y se forman dos diagonales contiguas que representan la vecindad vertical de los píxeles. En las segundas $n$ filas se reflejan las ecuaciones pertenecientes a $n_x$ y se forman dos diagonales separadas por el alto de la imagen que representan la vecindad horizontal de los píxeles.
 
 Esta disposición de los datos provoca que cada columna de $M$ contenga a lo sumo 4 elementos. Nuestra implementación consiste en considerar a esta matriz como un tipo especial de matriz (la esparsa), para la cual no se tiene un arreglo bidimensional como sería el caso habitual sino un vector de hashmap, donde cada elemento del vector representa una columna. Cada hashmap contendrá entonces 4 elementos o menos. Esto permite que al querer multiplicar una columna por otra (como ocurre en el caso de querer calcular $M^tM$) no sea necesario recorrer toda la columna sino únicamente los elementos distintos de 0. Esta optimización es crucial para el desarrollo del algoritmo a nivel temporal.
+
+Luego resta resolver el sistema de la ecuación 15. Para ello aplicamos la factorización de Cholesky, que también resulta optimizada debido a tratarse de una matriz esparsa, ya que para el cálculo de la matriz triangular inferior es necesario recorrer lo calculado en las iteraciones previas, y al utilizar la implementación de matriz esparsa definida anteriormente se logra recorrer la matriz solamente en los elementos distintos de 0.
