Actualizar comentarios e intro

--- a/informe/desarrollo.tex
+++ b/informe/desarrollo.tex
@@ -2,46 +2,41 @@
 
 \subsection{Calibración}
 
-El primer paso para comenzar el algoritmo de fotogrametría estéreo es realizar
-la calibración del sistema. Cada imágen tiene una fuente de iluminación. Cada
-fuente tiene una dirección en la que apunta su luz. El objetivo del paso de
-calibración es poder calcular la dirección de cada fuene de iluminación.
+El primer paso para comenzar el algoritmo de fotometría estéreo es realizar
+la calibración del sistema. Para cada objeto, contamos con 12 imágenes,
+cada una con una fuente de iluminación distinta; es decir, la dirección o
+ángulo de incidencia de la luz es diferente. El objetivo del paso de calibración
+es calcular la dirección de cada fuente de iluminación.
 
-Cada objeto tiene 12 imágenes del mismo con fuentes de iluminación con
-distintas direcciones. Estas 12 fuentes de iluminación son distintas entre sí,
-pero se repiten para todos los objetos. Esto hace posible que si pudiesen
-calcularse las direcciones de las 12 fuentes para un objeto en particular,
-entonces podrían reutilizarse para el resto de los objetos.
-
-En este caso pueden calcularse las direcciones de las fuentes de iluminación
-de uno de los objetos: la esfera. Lo que permite que esto sea posible es el
-hecho de conocer con exactitud la profundidad del objeto. Al saber que el
-objeto es una esfera, puede conocerse con exactitud la posición de cada
-punto, sabiendo el centro y el radio de la misma siguiendo la siguiente
-ecuación:
+A este efecto, contamos con un conjunto de imágenes de referencia iluminadas
+con los mismos ángulos que el objeto a analizar, pero con la ventaja de que se
+trata de una esfera. Al tener una forma conocida y simple, podemos conocer con
+exactitud la profundidad y posición espacial de cada punto del objeto,
+sabiendo el centro y el radio de la misma siguiendo la siguiente ecuación:
 
 \begin{center}
 $(x - x_0)^2 + (y - y_0)^2 + (z - z_0)^2 = r^2$
 \end{center}
 
-donde $z_0 = 0$ ya que suponemos que está centrada respecto del eje z.
-Gracias a esto, puede calcularse el vector normal a cada punto de la esfera
+Si definimos $z_0 = 0$ (es decir, si asumimos que la esfera está centrada
+respecto del eje z), podemos calcular el vector normal a cada punto de la esfera:
 
 \begin{center}
 $n = (x - x_0, y - y0, z)$
 \end{center}
 
-Sabemos, dada la naturaleza de la esfera, que el punto de mayor intensidad
-lumínica será el más cercano a la fuente de iluminación, por lo que la normal
+Para los propósitos de este trabajo, vamos a asumir que los objetos tienen
+superficies lambertiana, por lo que la intensidad del brillo de un punto
+particular solo depende de la orientación de la superficie respecto de la
+fuente de iluminación. Es decir, el punto de mayor intensidad lumínica
+será el más cercano a la fuente de iluminación, por lo que la normal
 de dicho punto apuntará en dirección a la fuente. El vector opuesto a esta
 normal tiene la dirección de la fuente.
 
 Si se ejecuta este procedimiento para las 12 imágenes de la esfera, entonces
-el resultado será conocer la dirección de las 12 fuentes de iluminación. Esto
-permite, en los pasos siguientes del algoritmo de fotogrametría estéreo,
-poder calcular la normal para cada punto, basándose en que la fuente de
-iluminacion $s_i$ con $1 \leq i \leq 12$ es la misma para la imágen $i$ de
-cada objeto.
+el resultado será conocer la dirección de las 12 fuentes de iluminación. Esto,
+combinado con las imágenes correspondientes de la figura a procesar,
+nos permitirá calcular la normal para cada punto de la figura.
 
 \subsection{Reconstrucción del modelo 3D de los objetos digitalizados}
 
@@ -49,13 +44,6 @@ Una vez completada la calibración, ya se cuenta con las direcciones de
 iluminación de cada caso, las cuales junto con la secuencia de imágenes de un
 objeto nos proporcionarán la información necesaria para poder calcular todos
 los puntos $(x,y,z)$ del modelo digitalizado y las normales de cada uno.
-
-Puede dividirse en:
-
-\begin{enumerate}
-\item Construcción del campo normal
-\item Estimación de la profundidad
-\end{enumerate}
 
 \subsubsection{Contrucción del campo normal}
 
@@ -68,7 +56,11 @@ iluminación difiera entre sí necesaria para inferir la orientación de la
 superficie.
 
 La matriz de direcciones contiene la dirección de cada fuente de iluminación
-dispuesta como fila. Una vez resuelto el sistema de ecuaciones se podrá conocer $m$ y asi mediante la siguiente ecuacion $||m|| = |I_0\rho| ||n||$, conocer el valor absoluto de $I_0\rho$. Esto permite conocer $n$ ya que tiene la misma dirección que $m$ con la diferencia de que $n$ está normalizado por ser la norma. Por lo que nos queda que $n = \frac{m}{||m||}$.
+dispuesta como fila. Una vez resuelto el sistema de ecuaciones se podrá
+conocer $m$ y asi mediante la siguiente ecuacion $||m|| = |I_0\rho| ||n||$,
+conocer el valor absoluto de $I_0\rho$. Esto permite conocer $n$ ya que tiene
+la misma dirección que $m$ con la diferencia de que $n$ está normalizado
+por ser la norma. Por lo que nos queda que $n = \frac{m}{||m||}$.
 
 \subsubsection{Estimacion de la profundidad}
 
