--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -4,20 +4,10 @@
 \usepackage[spanish,es-nodecimaldot]{babel}
 \usepackage{caratula}
 \usepackage[pdfencoding=auto, colorlinks=true, linkcolor=blue]{hyperref}
-\usepackage[boxruled, longend]{algorithm2e}
 \usepackage{wrapfig}
-% \usepackage{tikz}
 \usepackage[rightcaption]{sidecap}
-% \usetikzlibrary{babel}
+\usepackage{amsmath}
 \graphicspath{imagenes/}
-
-% \tikzset{nodeList/.style={every node/.style={draw, circle}}}
-% \tikzset{pathList/.style={every node/.style={midway, fill=white}}}
-
-
-\newcommand{\ord}{\ensuremath{\operatorname{O}}}
-\newcommand{\nat}{\ensuremath{\mathbb{N}}}
-\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 
 \begin{document}
 % CARATULA
