--- a/informe/desarrollo.tex
+++ b/informe/desarrollo.tex
@@ -114,3 +114,25 @@ Después de ese pequeño análisis, se precedió a realizar la generación de mo
 
 \includegraphics[width=.4\linewidth]{imagenes/gato_small_dephs_789.png}
 \includegraphics[width=.4\linewidth]{imagenes/buda_small_dephs_789.png}
+
+Tras generar este segundo conjunto de imágenes se notó que ambos modelos tenían fallas muy marcadas ambos en la parte superior izquierda. Por lo tanto, se decidió reconstruir el modelo del mate para poder hacer una comparación más y el resultado obtenido fue el siguiente:
+
+\includegraphics[width=.4\linewidth]{imagenes/mate_small_model_789.png}
+\includegraphics[width=.4\linewidth]{imagenes/mate_small_dephs_789.png}
+
+Esta reconstrucción permitió concluir que las luces que se utilizaron provenían todas del lado derecho, generando una sombra en la parte izquierda de los objetos y eso permitió explicar por qué en las tres figuras habían partes faltantes en ese lado.
+
+También se probó a utilizar las luces 10, 11 y 12, pero se obtuvo exactamente el mismo resultado que con 4, 5 y 6, por lo que se concluyó lo mismo que para estas últimas, solo que para las luces 10 y 12.
+
+Por último, se probó a utilizar las luces 1, 5 y 11 ya que se observó que para algunos modelos andaba bastante mejor que las combinaciones probadas con anterioridad. Los resultados para el gato, el buda y el mate fueron los siguientes:
+
+\includegraphics[width=.4\linewidth]{imagenes/gato_small_model_1511.png}
+\includegraphics[width=.4\linewidth]{imagenes/buda_small_model_1511.png}
+
+\includegraphics[width=.4\linewidth]{imagenes/gato_small_dephs_1511.png}
+\includegraphics[width=.4\linewidth]{imagenes/buda_small_dephs_1511.png}
+
+\includegraphics[width=.4\linewidth]{imagenes/mate_small_model_1511.png}
+\includegraphics[width=.4\linewidth]{imagenes/mate_small_dephs_1511.png}
+
+Se observó entonces con estos resultados que las luces elegidas efectivamente dieron un resultado diferente a los anteriores y además, con una calidad superior, ya que los tres modelos se asemejan bastante a los objetos reales a pesar de tener ciertas deformaciones como se ve en el caso del buda.
