Fix typos menores en desarrollo

--- a/informe/desarrollo.tex
+++ b/informe/desarrollo.tex
@@ -87,6 +87,7 @@ En este trabajo se realizaron una serie de experimentaciones para poder responde
 \subsubsection{Análisis cualitativo}
 
 \paragraph{Luces por calibración VS Luces de la cátedra}
+\
 
 Luego de calibrar el sistema con las imágenes de referencia, decidimos comparar
 las direcciones de luz obtenidas con aquellas provistas por la cátedra. Notamos
@@ -116,6 +117,7 @@ requerimiento de 3 luces distintas para la reconstrucción del objeto 3D.
 En la siguiente sección se trata con mayor detalle.
 
 \paragraph{Calibración y repercusiones}
+\
 
 El objetivo de la calibración es obtener suficiente información sobre cada punto
 para determinar sus 3 componentes espaciales. Por esto, es necesario tener 3
@@ -136,7 +138,7 @@ la construcción de los cuerpos, ya que la iluminación de cada punto no
 se condice con el ángulo de incidencia de la luz establecido.
 
 En las siguientes imágenes, se puede observar el ruido que introduce la calibración
-imprecisa (izquierda) compara con las direcciones correctas de las luces utilizadas
+imprecisa (izquierda) comparada con las direcciones correctas de las luces utilizadas
 (derecha) para casos extremos de imprecisión:
 
 \begin{center}
